--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -18,7 +18,7 @@
 
     <title>루미너스</title>
   </head>
-  <body>
+  <body style="margin: 0px;">
     <noscript>Developed by cola.</noscript>
     <div id="root"></div>
   </body>
