--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="루미너스에 대한 설명을 적어넣습니다."
+      content="루미너스는 '어둠 속에서 빛나는'이라는 뜻을 가지고 있는 영어 단어입니다. 어둠 속에서 빛이 나듯이, 시각장애인이 보는 세상이 더 밝아지기를 원한다는 비전을 가지고 있습니다."
     />
+    <meta name=”keywords” content="루미너스, 시각장애인, 거꾸로캠퍼스" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/Logo.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <script>Kakao.init('c8f006856e9de6f8851bdd0e0192becb');
