prevent duplicate road info input

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name=”keywords” content="루미너스, 시각장애인, 거꾸로캠퍼스" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/Logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
     <script>Kakao.init('c8f006856e9de6f8851bdd0e0192becb');
     console.log(Kakao.isInitialized());</script>
 
